fin ajustement css

--- a/about.html
+++ b/about.html
@@ -38,24 +38,24 @@
     </div>
   </nav>
 
-  <div class="header-home">
-    <h1 class="h1-home">
+  <div class="header-about">
+    <h1 class="h1-about">
       ChooseMyCompany
     </h1>
-    <h2 class="h2-home">
+    <h2 class="h2-about">
       L'entreprise qui m'a accueillie pour mon stage
     </h2>
   </div>
 
   <br />
 
-  <h3 class="h3-headers-home">
+  <h3 class="h3-about">
     Présentation de l'entreprise
   </h3>
-  <div class="line-under-headers">
+  <div class="line-under-h3">
     ________________________________________________________________________
   </div>
-  <p class="paragraph-about-me">
+  <p class="paragraph-about">
     Positionnement</br>
     Marché</br>
     Structure</br>
@@ -69,7 +69,7 @@
   <br />
   <br />
 
-  <div class="github">
+  <div class="footer">
     Site codé par Marion Gérard.
   </div>
 </body>
