--- a/contact.html
+++ b/contact.html
@@ -38,21 +38,21 @@
     </div>
   </nav>
 
-  <div class="header-home">
-    <h1 class="h1-home">
+  <div class="header-contact">
+    <h1 class="h1-contact">
       Me contacter
     </h1>
-    <h2 class="h2-home">
+    <h2 class="h2-contact">
       A compléter
     </h2>
   </div>
 
   <br />
 
-  <h3 class="h3-headers-home" id="contact">
+  <h3 class="h3-contact" id="contact">
     Me contacter
   </h3>
-  <div class="line-under-headers">
+  <div class="line-under-h3">
     ________________________________________________________________________
   </div>
   <div class="wrapper-contact">
@@ -71,7 +71,7 @@
     </a>
     </div>
   </div>
-  <div class="github">
+  <div class="footer">
     Site codé par Marion Gérard.
   </div>
 </body>
