mise en page faite

--- a/about.html
+++ b/about.html
@@ -55,20 +55,56 @@
   <div class="line-under-h3">
     ________________________________________________________________________
   </div>
+  <h4 class="h4-about">
+    Positionnement
+  </h4>
   <p class="paragraph-about">
-    Positionnement</br>
-    Marché</br>
-    Structure</br>
-    Stratégie</br>
-    SWOT</br>
-    Offre</br>
-    Enjeux</br>
-    Valeurs</br>
+    Lorem ipsum dolor sit amet.
   </p>
-
+  <h4 class="h4-about">
+    Marché
+  </h4>
+  <p class="paragraph-about">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-about">
+    Structure
+  </h4>
+  <p class="paragraph-about">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-about">
+    Stratégie
+  </h4>
+  <p class="paragraph-about">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-about">
+    SWOT
+  </h4>
+  <p class="paragraph-about">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-about">
+    Offre
+  </h4>
+  <p class="paragraph-about">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-about">
+    Enjeux
+  </h4>
+  <p class="paragraph-about">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-about">
+    Valeurs
+  </h4>
+  <p class="paragraph-about">
+    Lorem ipsum dolor sit amet.
+  </p>
   <br />
   <br />
-
   <div class="footer">
     Site codé par Marion Gérard.
   </div>
