--- a/index.html
+++ b/index.html
@@ -55,15 +55,18 @@
   <div class="line-under-h3">
     ________________________________________________________________________
   </div>
+  <div class="photo-marion">
+  <img src="/medias/photo-moi.jpg" alt="photo marion" class="photo img-fluid" title="Marion">
+  </div>
   <p class="paragraph-home">
     Je m’appelle Marion, j’ai 26 ans. Avant d’entrer à l’ESD, j’ai fait une licence en Langues Etrangères Appliquées où j’ai découvert la communication. C’est un domaine que j’ai beaucoup aimé et je souhaitais continuer dans cette voie.
     Après l’obtention de ma licence et deux ans de mûre réflexion, j’ai décidé de rejoindre l’ESD Paris pour me spécialiser dans le digital et l’aspect créatif tout en faisant de la communication par le biais de mon stage et de ma future alternance.
     Aujourd’hui, je rentre en mastère de Digital Design à l’ESD avec une alternance en communication digitale chez Veolia.
   </p>
   <div class="wrapper-skills-home">
-    <h5 class="h5">
+    <h4 class="h4-home">
       Les logiciels que je maitrise :
-    </h5>
+    </h4>
     <div class="wrapper-logos-home">
       <img src="/medias/html-icon.png" alt="html icon" class="logos-skills-home img-fluid" title="HTML">
       <br>
@@ -141,15 +144,16 @@
     Digital du 20 mars 2023 au 20 septembre 2023.
   </br>
   </br>
-    Mes différentes missions ont été :</br>
-    - Réalisation de montage vidéo</br>
-    - Tournage de vidéos et d’émissions</br>
-    - Gestion de commandes de goodies et de trophées</br>
-    - Aide à la Directrice Artistique</br>
-    - Participation à l'organisation d’un événement au Musée du quai Branly</br>
-    - Gestion des réseaux sociaux (LinkedIn et Instagram)</br>
-    - Préparation d’interviews</br>
-    - Accompagnement d’invités lors des tournages</br>
+    <b>Mes différentes missions ont été :</b></br>
+    Réalisation de montage vidéo</br>
+    Tournage de vidéos et d’émissions</br>
+    Gestion de commandes de goodies et de trophées</br>
+    Aide à la Directrice Artistique</br>
+    Participation à l'organisation d’un événement 
+    au Musée du quai Branly</br>
+    Gestion des réseaux sociaux (LinkedIn et Instagram)</br>
+    Préparation d’interviews</br>
+    Accompagnement d’invités lors des tournages
   </p>
 
   <h3 class="h3-home" id="contact">
@@ -164,8 +168,9 @@
     Marine Deschamps pour son accompagnement lors de la recherche et lors de la 
     réalisation du contrat. Je remercie mes collègues qui m’ont donné envie de venir 
     au travail chaque jour avec leur joie de vivre. Je remercie Adèle Saulière, 
-    l’autre stagiaire de la communication, pour son aide et son amitié. Enfin, je 
-    remercie l’École Supérieure du Digital.
+    l’autre stagiaire de la communication, pour son aide et son amitié.
+    </br>
+    Enfin, je remercie l’École Supérieure du Digital.
   </p>
   </br>
   </br>
