--- a/work.html
+++ b/work.html
@@ -55,15 +55,21 @@
   <div class="line-under-h3">
     ________________________________________________________________________
   </div>
-  <h5 class="h5">
+  <h4 class="h4-work2">
     Le service et son contexte
-  </h5>
-  <h5 class="h5">
+  </h4>
+  <p class="paragraph-work">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-work2">
     Détails de mes missions
-  </h5>
-  <h5 class="h5">
+  </h4>
+  <p class="paragraph-work">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-work2">
     Quelques réalisations concrètes et illustrées
-  </h5>
+  </h4>
   <div class="container mt-4">
   <div class="row justify-content-center">
     <div class="presentation-realisations col-6">
@@ -71,13 +77,13 @@
     </div>
     <div class="realisations-single col-4">
       <h4 class="h4-work">
-        Cat page
+        Sans Filtre
       </h4>
       <p class="realisation-text">
-        A page about cats made with HTML and CSS. It was my very first project as a front-end developer.
+        Blablabla.
       </p>
       <a class="realisation-link" href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="Learn about cats!">
-        Go !
+        Voir
       </a>
     </div>
   </div>
@@ -88,13 +94,13 @@
     </div>
     <div class="realisations-single col-4">
       <h4 class="h4-work">
-        Weather application
+        L'insider
       </h4>
       <p class="realisation-text">
-        A weather tool to know what's the weather gonna be. It's made using HTML, CSS, Bootstrap, Javascript and API.
+        Blablabla.
       </p>
       <a class="realisation-link" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">
-        Go !
+        Voir
       </a>
     </div>
   </div>
@@ -108,13 +114,41 @@
   <div class="line-under-h3">
     ________________________________________________________________________
   </div>
+  <h4 class="h4-work2">
+    Mes résultats (avec des données objectives, quanti et quali)
+  </h4>
   <p class="paragraph-work">
-    Mes résultats (avec des données objectives, quanti et quali)</br>
-    Ma plus grande réussite</br>
-    Ma plus grande leçon</br>
-    Les compétences que j'ai acquises</br>
-    Ce que j'ai appris d’un point de vue humain, équipe, management</br>
-    Comment cette expérience va alimenter mon projet professionnel</br>
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-work2">
+    Ma plus grande réussite
+  </h4>
+  <p class="paragraph-work">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-work2">
+    Ma plus grande leçon
+  </h4>
+  <p class="paragraph-work">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-work2">
+    Les compétences que j'ai acquises
+  </h4>
+  <p class="paragraph-work">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-work2">
+    Ce que j'ai appris d’un point de vue humain, équipe, management
+  </h4>
+  <p class="paragraph-work">
+    Lorem ipsum dolor sit amet.
+  </p>
+  <h4 class="h4-work2">
+    Comment cette expérience va alimenter mon projet professionnel
+  </h4>
+  <p class="paragraph-work">
+    Lorem ipsum dolor sit amet.
   </p>
 
   <br />
