--- a/work.html
+++ b/work.html
@@ -94,6 +94,23 @@
     </div>
     <div class="realisations-single col-4">
       <h4 class="h4-work">
+        Vis Ma Vie
+      </h4>
+      <p class="realisation-text">
+        Blablabla.
+      </p>
+      <a class="realisation-link" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">
+        Voir
+      </a>
+    </div>
+  </div>
+  <br />
+  <div class="row justify-content-center">
+    <div class="presentation-realisation col-6">
+      <img src="/medias/weather project.png" alt="weather project" class="img-fluid rounded" title="Weather project">
+    </div>
+    <div class="realisations-single col-4">
+      <h4 class="h4-work">
         L'insider
       </h4>
       <p class="realisation-text">
@@ -159,8 +176,32 @@
   <div class="line-under-h3">
     ____________________________________________________________
   </div>
+  <h4 class="h4-work2">
+    Adèle, collègue en communication
+  </h4>
   <p class="paragraph-work">
-    Adèle
+    Marion est une collègue incroyable pour moi. En effet, premièrement, 
+    elle rayonne et illumine la pièce à chaque fois qu'elle arrive au bureau. 
+    Cela peut paraître anodin, mais c'est une facette de sa personnalité qui 
+    permet de commencer la journée en créant une bonne humeur dans l'équipe, 
+    ce qui est nécessaire pour travailler dans de bonnes conditions.
+    Côté travail, même si je ne saurai réellement donner de détails techniques 
+    car je ne travaille pas du tout sur les mêmes missions, je peux assurer que 
+    Marion était une personne très réactive qui faisait force de proposition. 
+    De plus, dès que j'avais besoin d'un visuel ou d'un changement à réaliser, 
+    elle le faisait de façon efficace et avec rigueur, ce qui a permis à l'équipe 
+    d'avancer rapidement et sereinement sur de nombreux projets.
+    Cependant, c'est également le niveau humain qui m'a plu chez Marion et que je 
+    souhaiterais appuyer. En effet, c'est une personne très à l'écoute et avec 
+    laquelle on ne se sent pas jugée, et cela crée un espace de confiance très 
+    intéressant et agréable dans l'entreprise.
+    Enfin, je peux dire que de manière générale, je suis ravie d'avoir partagé le 
+    même espace de travail que Marion pendant mon stage, et qu'elle a énormément 
+    contribué à me créer un excellent souvenir de mon expérience. Je la remercie 
+    pour sa bonne humeur, son sérieux et la qualité du travail qu'elle a amené, 
+    non seulement à l'équipe, mais également à l'ensemble des employés de 
+    ChooseMyCompany, et suis certaine qu'elle s'épanouira tant au niveau professionnel 
+    que personnel dans ses prochaines expériences.
   </p>
 
 </br>
