--- a/index.html
+++ b/index.html
@@ -168,7 +168,8 @@
     Marine Deschamps pour son accompagnement lors de la recherche et lors de la 
     réalisation du contrat. Je remercie mes collègues qui m’ont donné envie de venir 
     au travail chaque jour avec leur joie de vivre. Je remercie Adèle Saulière, 
-    l’autre stagiaire de la communication, pour son aide et son amitié.
+    l’autre stagiaire de la communication, pour son aide et son amitié. Je tenais aussi
+    remercier Léa Trécul, stagiaire au conseil, pour son amitié et son soutien.
     </br>
     Enfin, je remercie l’École Supérieure du Digital.
   </p>
