--- a/work.html
+++ b/work.html
@@ -43,7 +43,7 @@
       Mon Stage
     </h1>
     <h2 class="h2-work">
-      A compléter
+      Les détails de mon stage
     </h2>
   </div>
 
@@ -59,72 +59,123 @@
     Le service et son contexte
   </h4>
   <p class="paragraph-work">
-    Lorem ipsum dolor sit amet.
+    Le service Communication est composé de 4 personnes en CDI et 2 à 3 stagiaires. 
+    Il y a une Directrice Artistique, une Directrice Communication et Marketing, une 
+    Responsable Communication, une Chargée de Communication, une stagiaire Graphiste 
+    et une ou deux stagiaires Community Manager.</br>
+    Le service s’occupe surtout de la communication externe qui a pour principal 
+    objectif de faire rayonner la marque auprès de potentiels clients cible, mais 
+    aussi parfois de la communication interne qui a pour but de faciliter les échanges 
+    entre les employés.</br>
+    </br>
+    <b>La communication externe :</b></br>
+    Celle-ci se déroule sur plusieurs supports, l'entreprise est présente sur les 
+    réseaux sociaux tels que LinkedIn en priorité et Instagram en second.</br>
+    De plus, jusqu'à juillet, l'entreprise faisait appel à une agence RP qui leur 
+    proposait un éventail de journalistes à contacter selon les besoins. Cependant, 
+    dû à des restrictions budgétaires, ChooseMyCompany a dû s'en séparer. Enfin, afin 
+    de réaliser des interviews pour faire des articles nommés ChooseContent, 
+    l'entreprise fait appel à des personnes en freelance.</br>
+    La stratégie de communication externe de ChooseMyCompany cherche à valoriser la 
+    transparence et la satisfaction des employés des différents clients labellisés. 
+    Une place de plus en plus grande est accordée aux employés en général, mais aussi 
+    à la mise en valeur des différents postes au sein de ChooseMyCompany.</br>
+    </br>
+    <b>La communication interne :</b></br>
+    L’entreprise possède un Comité Exécutif (COMEX) composé de 8 salariés et 
+    dirigeants, qui se réunit toutes les semaines afin d’échanger sur des décisions 
+    opérationnelles et stratégiques. Les informations importantes qui en ressortent 
+    sont communiquées à l’ensemble des collaborateurs lors de réunions mensuelles 
+    nommées « All Team Meeting » ou par les managers eux-mêmes auprès de leurs équipes.
+    Pour ce qui est des canaux de communication, tous les collaborateurs sont présents 
+    sur le groupe de travail Slack et sont ajoutés à différents canaux de discussions. 
+    Enfin, ChooseMyCompany possède également un groupe collectif WhatsApp ainsi qu’une 
+    adresse mail collective (all.choosemycompany.com).
   </p>
   <h4 class="h4-work2">
     Détails de mes missions
   </h4>
   <p class="paragraph-work">
-    Lorem ipsum dolor sit amet.
+    <b>Réalisation de montage vidéo</b></br>
+    Montage des vidéos filmées avec le logiciel Premiere Pro.</br>
+    <b>Tournage de vidéos</b></br>
+    Tournage des vidéos avec l’iphone et la caméra pour les vidéos internes</br>
+    <b>Gestion de commandes de goodies et de trophées</b></br>
+    Suivi d’un tableau excel des commandes et contact avec le fournisseur.</br>
+    <b>Aide à la Directrice Artistique</b></br>
+    Utilisation des templates réalisés par la DA et imagination de la direction 
+    artistique des vidéos montées.</br>
+    <b>Participation à l'organisation d’un événement au Musée du quai Branly</b></br>
+    Aide à l’organisation d’une cérémonie de remise des trophées au Musée du quai 
+    Branly, contact avec les invités, échanges avec les contacts sur place, mise en 
+    place de la salle.</br>
+    <b>Gestion des réseaux sociaux (LinkedIn et Instagram)</b></br>
+    Réalisation de stories, suivi des statistiques, publication des posts, community 
+    management.</br>
+    <b>Préparation d’interviews et écriture de scripts</b></br>
+    Réalisation des scripts des vidéos tournées en interne et préparation de questions 
+    pour faire des interviews.</br>
+    <b>Accompagnement d’invités lors des tournages</b></br>
+    Accueil et accompagnement des invités sur place, tournage d’interview à l’iphone.
   </p>
   <h4 class="h4-work2">
     Quelques réalisations concrètes et illustrées
   </h4>
-  <div class="container mt-4">
-  <div class="row justify-content-center">
-    <div class="presentation-realisations col-6">
-      <img src="/medias/cat project.png" alt="cat project" class="img-fluid rounded" title="Cat project">
+  <p class="paragraph-work">
+    Des vidéos que nous avons tournées à l’iphone ou à la caméra avec l’équipe 
+    Communication, et dont j’ai fait le montage et la proposition de direction 
+    artistique. Ce sont mes principales réalisations et surtout celles qui peuvent 
+    être facilement montrées.
+  </p>
+  </br>
+  <div class="container text-center">
+    <div class="row justify-content-center">
+      <div class="col-3">
+        <img src="/medias/sans-filtre.jpg" alt="cat project" class="img-fluid rounded" title="Sans filtre">
+        <h4 class="h4-work">
+          Sans Filtre
+        </h4>
+        <p class="realisation-text">
+          1 vidéo</br>
+          Impressions Linkedin : 2293</br>
+          Reactions Linkedin : 57</br>
+          Taux d’engagement : 8,02%</br>
+        </p>
+        <a class="realisation-link" href="https://www.linkedin.com/feed/update/urn:li:activity:7054131543094538240" target="_blank" title="Go">Vidéo</a>
+      </div>
+      <div class="col-3">
+        <img src="/medias/vis-ma-vie.jpg" alt="cat project" class="img-fluid rounded" title="Vis ma vie">
+        <h4 class="h4-work">
+          Vis Ma Vie
+        </h4>
+        <p class="realisation-text">
+          2 vidéos</br>
+          Impressions Linkedin : 1742/2327</br>
+          Reactions Linkedin : 32/39</br>
+          Taux d’engagement : 7%/5,24%</br>
+        </p>
+        <a class="realisation-link" href="https://www.linkedin.com/feed/update/urn:li:activity:7064624116871393281" target="_blank" title="Go">Vidéo 1</a> 
+        / <a class="realisation-link" href="https://www.linkedin.com/feed/update/urn:li:activity:7085265497935478784" target="_blank" title="Go">Vidéo 2</a>
+      </div>
+      <div class="col-3">
+        <img src="/medias/insider.jpeg" alt="weather project" class="img-fluid rounded" title="Insider">
+        <h4 class="h4-work">
+          L'insider
+        </h4>
+        <p class="realisation-text">
+          3 vidéos</br>
+          Impressions Linkedin : 928/819/2737</br>
+          Reactions Linkedin : 37/56/44</br>
+          Taux d’engagement : 9,38%/12,82%/4,86%</br>
+        </p>
+        <a class="realisation-link" href="https://www.linkedin.com/feed/update/urn:li:activity:7089620311528099841" target="_blank" title="Go">Vidéo 1</a> 
+        / <a class="realisation-link" href="https://www.linkedin.com/feed/update/urn:li:activity:7092882155264974849" target="_blank" title="Go">Vidéo 2</a> 
+        / <a class="realisation-link" href="https://www.linkedin.com/feed/update/urn:li:activity:7100491977359507456" target="_blank" title="Go">Vidéo 3</a>
+      </div>
     </div>
-    <div class="realisations-single col-4">
-      <h4 class="h4-work">
-        Sans Filtre
-      </h4>
-      <p class="realisation-text">
-        Blablabla.
-      </p>
-      <a class="realisation-link" href="https://frosty-northcutt-7689db.netlify.app/" target="_blank" title="Learn about cats!">
-        Voir
-      </a>
-    </div>
-  </div>
-  <br />
-  <div class="row justify-content-center">
-    <div class="presentation-realisation col-6">
-      <img src="/medias/weather project.png" alt="weather project" class="img-fluid rounded" title="Weather project">
-    </div>
-    <div class="realisations-single col-4">
-      <h4 class="h4-work">
-        Vis Ma Vie
-      </h4>
-      <p class="realisation-text">
-        Blablabla.
-      </p>
-      <a class="realisation-link" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">
-        Voir
-      </a>
-    </div>
-  </div>
-  <br />
-  <div class="row justify-content-center">
-    <div class="presentation-realisation col-6">
-      <img src="/medias/weather project.png" alt="weather project" class="img-fluid rounded" title="Weather project">
-    </div>
-    <div class="realisations-single col-4">
-      <h4 class="h4-work">
-        L'insider
-      </h4>
-      <p class="realisation-text">
-        Blablabla.
-      </p>
-      <a class="realisation-link" href="https://silly-galileo-d0e078.netlify.app/" target="_blank" title="See the weather forecast">
-        Voir
-      </a>
-    </div>
-  </div>
   </div>
 
   <br />
-
   <h3 class="h3-work" id="contact">
     Bilan et perspectives
   </h3>
@@ -135,37 +186,61 @@
     Mes résultats (avec des données objectives, quanti et quali)
   </h4>
   <p class="paragraph-work">
-    Lorem ipsum dolor sit amet.
+    Il est difficile de mesurer mes résultats avec des données mais depuis que nous 
+    avons repris le compte instagram avec l’autre stagiaire en communication, nous 
+    avons obtenu 220 nouveaux abonnés, sur une période de 6 mois nous sommes passés 
+    de 361 abonnés à 581 abonnés.
   </p>
   <h4 class="h4-work2">
     Ma plus grande réussite
   </h4>
   <p class="paragraph-work">
-    Lorem ipsum dolor sit amet.
+    Avoir repris le compte instagram avec l’autre stagiaire en communication. On a 
+    réussi à le faire revivre, à le moderniser légèrement, à faire du contenu qui 
+    est plus adapté et axé sur les reels. J’ai fait beaucoup de montage vidéo pour 
+    mon entreprise et c’était assez nouveau pour eux ces formats vidéo. Ça a permis 
+    de dynamiser un peu la communication sur les réseaux sociaux, et d’avoir de 
+    nouveaux formats de communication. Je suis très fière d’avoir pu apporter ça à 
+    mon entreprise.
   </p>
   <h4 class="h4-work2">
     Ma plus grande leçon
   </h4>
   <p class="paragraph-work">
-    Lorem ipsum dolor sit amet.
+    Ma plus grande leçon a été sur le comportement à adopter au travail. Ce stage 
+    étant ma vraie première expérience en entreprise, j’ai beaucoup évolué sur ma 
+    manière de communiquer avec le reste des collègues. J’ai un sens de l’humour 
+    qui peut être trop cru pour certains et j’ai dû apprendre à faire attention au 
+    langage utilisé avec mes différents collègues.
   </p>
   <h4 class="h4-work2">
     Les compétences que j'ai acquises
   </h4>
   <p class="paragraph-work">
-    Lorem ipsum dolor sit amet.
+    J’ai acquis des compétences en organisation avec la gestion de commandes de 
+    trophées. J’ai gagné en maîtrise du logiciel Premiere Pro sur lequel j’ai fait 
+    tous les montages vidéos pour l’entreprise. J’ai acquis de l’expérience en 
+    relation client lors des différentes interviews. J’ai appris à savoir gérer les 
+    priorités, à mieux travailler en équipe et amélioré ma capacité à remettre en 
+    question mon travail. J’ai appris à organiser un événement et à savoir être 
+    force de proposition.
   </p>
   <h4 class="h4-work2">
     Ce que j'ai appris d’un point de vue humain, équipe, management
   </h4>
   <p class="paragraph-work">
-    Lorem ipsum dolor sit amet.
+    J’ai beaucoup appris d’un point de vue humain, j’ai appris à travailler au 
+    sein d’une équipe et à savoir prendre en compte les différences de chacun.
   </p>
   <h4 class="h4-work2">
     Comment cette expérience va alimenter mon projet professionnel
   </h4>
   <p class="paragraph-work">
-    Lorem ipsum dolor sit amet.
+    Cette expérience m’a permis de conforter mon attrait pour le domaine de la 
+    communication. J’ai vu des aspects de ce service qu’on ne peut pas voir en 
+    cours, j’ai pu toucher au monde de l’événementiel et faire aussi bien de la 
+    communication interne qu'externe. Avoir vu différentes facettes de la 
+    communication m’a permis de mieux savoir ce que je souhaitais faire.
   </p>
 
   <br />
@@ -177,7 +252,7 @@
     ____________________________________________________________
   </div>
   <h4 class="h4-work2">
-    Adèle, collègue en communication
+    Adèle, collègue et stagiaire en communication
   </h4>
   <p class="paragraph-work">
     Marion est une collègue incroyable pour moi. En effet, premièrement, 
