mise en place presque finie

--- a/about.html
+++ b/about.html
@@ -56,52 +56,155 @@
     _____________________________________________________________________________________________________________
   </div>
   <h4 class="h4-about">
-    Positionnement
+    L'entreprise
   </h4>
   <p class="paragraph-about">
-    Lorem ipsum dolor sit amet.
+    Anciennement nommée Meilleures Entreprises, l’entreprise ChooseMyCompany est 
+    une entreprise à mission (Loi Pacte) qui a été fondée en 2008 par trois 
+    co-fondateurs : Laurent Labbé, CEO, Celica Thellier, CRO, et Damien Benier, 
+    ancien CTO. Elle est née de l’envie de Laurent et Celica, qui, en tant qu’ex-DRH 
+    chez l’Oréal, souhaitaient donner la parole aux parties prenantes des entreprises 
+    pour que ces derniers travaillent dans les meilleures conditions possibles. L’idée 
+    fut donc de proposer une solution en ligne afin de mesurer l’engagement des 
+    employés et la satisfaction au travail. C'est 3 ans après sa création, en 2011, 
+    que Meilleures Entreprises devenait ChooseMyCompany. Certifiée B-Corp depuis juin 
+    2022, l’entreprise a un objectif premier qui est l'amélioration de la relation au 
+    travail pour tous.</br>
+  </br>
+    Aujourd’hui, l’entreprise fournit des solutions pour mesurer et améliorer 
+    l'engagement des employés, ainsi que pour collecter et analyser les avis des 
+    collaborateurs. Elle délivre des labels aux entreprises qui se démarquent en 
+    termes de satisfaction des employés.</br>
+    Grâce à ses outils et à sa plateforme, ChooseMyCompany aide les entreprises à 
+    évaluer leur culture d'entreprise, à identifier les points forts et les axes 
+    d'amélioration, et à promouvoir une image positive auprès des talents potentiels. 
+    Les employés peuvent partager leur expérience et donner leur avis anonymement sur 
+    leur entreprise, ce qui permet d'obtenir des données pertinentes et objectives sur 
+    le ressenti des collaborateurs.
   </p>
   <h4 class="h4-about">
-    Marché
+    L'offre
   </h4>
   <p class="paragraph-about">
-    Lorem ipsum dolor sit amet.
+    ChooseMyCompany propose à ses clients un abonnement à un logiciel SaaS 
+    (Software As A Service) permettant de réaliser des enquêtes en recueillant et 
+    en analysant les avis de ses parties prenantes sur de nombreuses questions. 
+    Ensuite, s’ils souhaitent progresser, il est possible d’obtenir un accompagnement 
+    personnalisé reposant sur la mesure de l’efficacité des actions engagées.</br>
+    Il existe de nombreuses enquêtes réalisables pour les différents modèles de 
+    réputations que propose ChooseMyCompany. À la fin de l’enquête, si les résultats 
+    correspondent aux exigences des critères d’accréditations (une participation d’au 
+    moins 50%, un score minimum prédéfini sur 5 étoiles et un certain taux de 
+    recommandation), le client peut se voir délivrer un label en lien avec le modèle 
+    de réputation pour lequel il a été interrogé.</br>
+  </br>
+    Les labels ont pour but d’aider les entreprises à attirer de nouveaux talents, 
+    développer l’engagement des équipes, améliorer la relation commerciale avec les 
+    clients et les fournisseurs, rassurer les actionnaires et prévenir les risques de 
+    réputation.</br>
+  </br>
+    ChooseMyCompany délivre des labels ESG dans les catégories suivantes :</br>
+    HappyIndex®AtWork : les entreprises où les salariés sont les plus engagés et 
+    motivés.</br>
+    TechAtWork® : les entreprises où les « Tech » sont les plus heureux.</br>
+    WeImpactIndex® : les entreprises dont les salariés apprécient le plus la réalité 
+    des pratiques sociales et environnementales (ESG).</br>
+    HappyIndex®AtSchool : les écoles offrant la meilleure Expérience étudiante.</br>
+    HybridWorkIndex® : les entreprises engagées dans l’optimisation du travail à 
+    distance.</br>
+    ParentsAtWork® : les entreprises dont les salariés apprécient l’excellence des 
+    politiques et pratiques de la parentalité.</br>
+    AgileAtWork® : les entreprises les plus agiles et innovantes.</br>
+    HappyIndex®Candidates : les entreprises les plus respectueuses des candidats, 
+    recrutés ou non recrutés.</br>
+    HappyIndex®Clients : les entreprises qui prennent soin de leurs clients.</br>
+    HappyIndex®AtWork StartUps : les start-up où les salariés sont les plus engagés 
+    et motivés.</br>
+    HappyIndex®AtWork for Starters : les entreprises où les jeunes diplômés sont 
+    les plus heureux.</br>
+    HappyIndex®Trainees : les entreprises qui proposent les meilleurs programmes 
+    de stages et alternances.</br>
+    HappyIndex®Trainees Alternance : les entreprises qui proposent les meilleurs 
+    programmes d'alternances.</br>
+    HappyIndex®Trainees Rémunération : les entreprises qui proposent les meilleures 
+    rémunérations.
   </p>
   <h4 class="h4-about">
-    Structure
+    La Stratégie
   </h4>
   <p class="paragraph-about">
-    Lorem ipsum dolor sit amet.
+    La solution SaaS de ChooseMyCompany, permet aux entreprises de développer 
+    non seulement l’engagement et la motivation de leurs équipes grâce à des 
+    enquêtes et des benchmarks externes, mais également leur attractivité auprès 
+    des bonnes cibles.</br>
+    Pour cela, ChooseMyCompany met une enquête sur mesure ou modélisée, à laquelle 
+    les parties prenantes de l’organisation en question devront répondre (les employés 
+    pour HappyIndex®AtWork, les étudiants pour HappyAtSchool®...).</br>
+    Ensuite, les avis sont récoltés de manière anonyme et analysés en interne chez 
+    ChooseMyCompany, puis communiqués en externe à l’organisation étudiée. On a 
+    également un accompagnement dans l’interprétation des data ainsi que la potentielle 
+    mise en place de plans d’actions rapides et mesurables (modules de formation).</br>
+    De plus, il existe deux formules principales : les clients freemium qui ne payent 
+    pas et qui n'ont donc pas accès à toute la data précise post-enquête et qui ne 
+    peuvent pas communiquer sur leur accréditation sauf s’ils ont pris l’option droit 
+    de com, et les clients premium qui ont accès à toute la data et aux kits de 
+    communication.</br>
+    Enfin, post enquête, l'entreprise cliente peut payer pour des formations nommées 
+    10 Things to Know ou 5 Things to Do que ChooseMyCompany prépare pour les aider à 
+    améliorer leurs résultats et améliorer la qualité de vie au travail.
   </p>
   <h4 class="h4-about">
-    Stratégie
+    Le marché
   </h4>
   <p class="paragraph-about">
-    Lorem ipsum dolor sit amet.
+    Depuis 2011, ChooseMyCompany accompagne plus de 1 000 entreprises dont 88% 
+    renouvellent leur confiance chaque année. Au niveau global, l’activité représente 
+    plus de 11 millions d’avis certifiés récoltés sur plus de 11 000 entreprises et 
+    plus de 100 écoles. Le tout, dans plus de 100 pays.</br>
+  </br>
+    ChooseMyCompany travaille avec un panel d'organisations très différentes, et 
+    issues de tout secteur d'activité. En effet, au niveau des entreprises, on compte 
+    les ¾ des entreprises du CAC40 tel que BNP Paribas, Capgemini, ENGIE, L'Oréal, 
+    certaines branches d'LVMH, Michelin ou encore Pernod Ricard. Sont également 
+    clientes des entreprises de tailles intermédiaires, des PME ainsi que des 
+    startups, telles que Dotwiz, Co'efficience 3, ou Mews Partners.</br>
+    De plus, au niveau des écoles, on en retrouve dans tous les domaines, comme TBS 
+    Education, Audencia et BSB pour le commerce, ou encore CentraleSupélec, Arts et 
+    Métiers et Centrale Marseille pour l'ingénierie, ou bien l’ESD Paris (membre de 
+    AD Education) pour le digital.
   </p>
   <h4 class="h4-about">
-    SWOT
+    La concurrence
   </h4>
   <p class="paragraph-about">
-    Lorem ipsum dolor sit amet.
+    ChooseMyCompany a un concurrent majeur direct : Great Place To Work. Cependant, 
+    il existe trois autres concurrents indirects qui impactent son environnement : 
+    Top Employers, Glassdoor, et Supermood.</br>
+    Cependant, chacun a son avantage compétitif. Pour mieux comprendre le marché 
+    compétitif dans lequel évolue ChooseMyCompany, on peut donc réaliser la 
+    comparaison suivante :</br>
+  </p>
+  <div class="div-tableau">
+  <img src="/medias/tableau-concurrence.PNG" alt="tableau concurrence" class="img-tableau">
+  </div>
+  <p class="paragraph-about">
+    ChooseMyCompany se différencie par ses enquêtes gratuites et anonymes à toutes 
+    les parties prenantes d'une organisation, et ce, de façon directe, ce qui permet 
+    d'obtenir 100% d'avis certifiés sans passer par des intermédiaires.
   </p>
   <h4 class="h4-about">
-    Offre
+    L'organisation
   </h4>
   <p class="paragraph-about">
-    Lorem ipsum dolor sit amet.
+    L’entreprise se compose de nombreux pôles différents qui peuvent être résumés 
+    dans le tableau suivant :
   </p>
-  <h4 class="h4-about">
-    Enjeux
-  </h4>
+  <div class="div-tableau">
+  <img src="/medias/tableau-organisation.png" alt="tableau organisation" class="img-tableau">
+  </div>
   <p class="paragraph-about">
-    Lorem ipsum dolor sit amet.
-  </p>
-  <h4 class="h4-about">
-    Valeurs
-  </h4>
-  <p class="paragraph-about">
-    Lorem ipsum dolor sit amet.
+    En plus de ces différents rôles, certains stagiaires et alternants viennent 
+    compléter tous les pôles.
   </p>
   <br />
   <br />
