--- a/index.html
+++ b/index.html
@@ -128,6 +128,12 @@
       <br>
       Pack Office
     </div>
+    <h4 class="h4-home">
+      Mon CV :
+    </h4>
+    <div class="photo-marion">
+      <img src="/medias/cv-marion.jpg" alt="cv marion" class="photo img-fluid" title="CV">
+    </div>
   </div>
 
   <br />
