--- a/index.html
+++ b/index.html
@@ -68,38 +68,38 @@
       Les logiciels que je maitrise :
     </h4>
     <div class="wrapper-logos-home">
-      <img src="/medias/html-icon.png" alt="html icon" class="logos-skills-home img-fluid" title="HTML">
+      <img src="/medias/premierepro-icon.png" alt="html icon" class="logos-skills-home img-fluid" title="HTML">
       <br>
       Premiere Pro
     </div>
     <div class="wrapper-logos-home">
-      <img src="/medias/css-icon.png" alt="css icon" class="logos-skills-home img-fluid" title="CSS">
+      <img src="/medias/illustrator-icon.png" alt="css icon" class="logos-skills-home img-fluid" title="CSS">
       <br>
       Illustrator
     </div>
     <div class="wrapper-logos-home">
-      <img src="/medias/js-icon.png" alt="js icon" class="logos-skills-home img-fluid" title="Javascript">
+      <img src="/medias/photoshop-icon.png" alt="js icon" class="logos-skills-home img-fluid" title="Javascript">
       <br>
       Photoshop
     </div>
     <div class="wrapper-logos-home">
-      <img src="/medias/api-icon.png" alt="api icon" class="logos-skills-home img-fluid" title="API">
+      <img src="/medias/aftereffects-icon.png" alt="api icon" class="logos-skills-home img-fluid" title="API">
       <br>
       After Effects
     </div>
     <div class="wrapper-logos-home">
-      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills-home img-fluid" title="GitHub">
+      <img src="/medias/figma-icon.png" alt="github icon" class="logos-skills-home img-fluid" title="GitHub">
       <br>
       Figma
     </div>
     <div class="wrapper-logos-home">
-      <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills-home img-fluid" title="Bootstrap">
+      <img src="/medias/canva-icon.png" alt="bootstrap icon" class="logos-skills-home img-fluid" title="Bootstrap">
       <br>
       Canva
     </div>
   </br>
     <div class="wrapper-logos-home">
-      <img src="/medias/github-icon.png" alt="github icon" class="logos-skills-home img-fluid" title="GitHub">
+      <img src="/medias/wordpress-icon.png" alt="github icon" class="logos-skills-home img-fluid" title="GitHub">
       <br>
       Wordpress
     </div>
@@ -119,12 +119,12 @@
       Javascript
     </div>
     <div class="wrapper-logos-home">
-      <img src="/medias/api-icon.png" alt="api icon" class="logos-skills-home img-fluid" title="API">
+      <img src="/medias/bootstrap-icon.png" alt="api icon" class="logos-skills-home img-fluid" title="API">
       <br>
       Bootstrap
     </div>
     <div class="wrapper-logos-home">
-      <img src="/medias/bootstrap-icon.png" alt="bootstrap icon" class="logos-skills-home img-fluid" title="Bootstrap">
+      <img src="/medias/packoffice-icon.png" alt="bootstrap icon" class="logos-skills-home img-fluid" title="Bootstrap">
       <br>
       Pack Office
     </div>
